# barbad

./: README.md  pyproject.toml
.github/workflows/: barbad_ci.yml  python-package-conda.yml
barbad/: __init__.py  __main__.py  cli.py  inline.py  main.py  result.py
test/: temp.py  test_inline.py  testutils.py
